Update project name and description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "spotifyradio",
+  "name": "spotify-radio",
   "version": "1.0.0",
-  "description": "Seja bem vindo(a) à sexta Semana Javascript Expert. Este é o código inicial para iniciar nossa jornada.",
+  "description": "Javascript Expert (Streams)",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -14,7 +14,7 @@
     "node": "17"
   },
   "keywords": [],
-  "author": "",
+  "author": "whisoer",
   "license": "ISC",
   "devDependencies": {
     "jest": "^27.5.1",
