--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "type": "module",
   "scripts": {
     "start": "nodemon server/index.js",
-    "test": "LOG_DISABLE=true NODE_OPTIONS=--experimental-vm-modules jest --no-cache",
-    "test:watch": "LOG_DISABLE=true NODE_OPTIONS=--experimental-vm-modules jest --no-cache --watchAll",
-    "test:coverage": "LOG_DISABLE=true NODE_OPTIONS=--experimental-vm-modules jest --no-cache --coverage tests/unit"
+    "test": "LOG_DISABLE=true NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --no-cache",
+    "test:watch": "LOG_DISABLE=true NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --no-cache --watchAll",
+    "test:coverage": "LOG_DISABLE=true NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --no-cache --coverage tests/unit",
+    "start:docker": "docker-compose up start"
   },
   "engines": {
     "node": "17"
@@ -22,6 +23,7 @@
   },
   "dependencies": {
     "pino": "^7.8.0",
-    "pino-pretty": "^7.5.3"
+    "pino-pretty": "^7.5.3",
+    "throttle": "^1.0.3"
   }
 }
