--- a/.gitignore
+++ b/.gitignore
@@ -119,4 +119,6 @@ temp/
 # Ignore all local history of files
 .history
 
+##sox commands##
+sox-commands.txt
 # End of https://www.gitignore.io/api/node,visualstudiocode
