--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "test:coverage": "LOG_DISABLE=true NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --no-cache --coverage tests/unit",
     "test:e2e": "LOG_DISABLE=true NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --no-cache tests/e2e",
 
-    "start:docker": "docker-compose up --build start",
-    "test:docker": "docker-compose up --build test",
-    "test:watch:docker": "docker-compose up --build test-watch",
-    "test:coverage:docker": "docker-compose up --build test-coverage"
+    "start:docker": "sudo docker-compose up --build start",
+    "test:docker": "sudo docker-compose up --build test",
+    "test:watch:docker": "sudo docker-compose up --build test-watch",
+    "test:coverage:docker": "sudo docker-compose up --build test-coverage"
   },
   "engines": {
     "node": "17"
