--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "type": "module",
   "scripts": {
     "start": "nodemon server/index.js",
-    "test": "LOG_DISABLE=true NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --no-cache",
+    "test": "LOG_DISABLE=true NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --force-exit --detectOpenHandles --no-cache",
     "test:watch": "LOG_DISABLE=true NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --no-cache --watchAll",
-    "test:coverage": "LOG_DISABLE=true NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --no-cache --coverage tests/unit",
-    "test:e2e": "LOG_DISABLE=true NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --no-cache tests/e2e",
+    "test:coverage": "LOG_DISABLE=true NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --force-exit --detectOpenHandles  --no-cache --coverage tests/unit",
+    "test:e2e": "LOG_DISABLE=true NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --force-exit --detectOpenHandles --no-cache tests/e2e",
 
     "start:docker": "sudo docker-compose up --build start",
     "test:docker": "sudo docker-compose up --build test",
